[package]
name = "geometry"
version = "0.1.0"
edition = "2018"
description = "geometry"
repository = ""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.75"
lyon = "0.17.5"
js-sys = "0.3.52"

[profile.release]
lto = true


[dependencies.web-sys]
version = "0.3.52"
features = [
    "console"
]
